<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    android:padding="15dp"
    android:background="@drawable/custom_ripple">

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/dd_mm"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/minTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/maxTempText"/>

    <TextView
        android:id="@+id/maxTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/max"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minTempText"/>

    <TextView
        android:id="@+id/minTempInDayItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_c"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/minTempText"
        app:layout_constraintBottom_toTopOf="@id/maxTempInDayItem"/>

    <TextView
        android:id="@+id/maxTempInDayItem"
        android:layout_width="wrap_content"
        android:text="@string/_17_c"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/maxTempText"
        app:layout_constraintTop_toBottomOf="@id/minTempInDayItem"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="110dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>